--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,6 @@
               "src/favicon.ico"
             ],
             "styles": [
-              "src/styles.scss",
               "node_modules/primeng/resources/primeng.css"
             ],
             "scripts": []
@@ -46,9 +45,7 @@
               "extractCss": true,
               "namedChunks": false,
               "aot": true,
-              "styles": [
-                "src/styles.scss"
-              ],
+              "styles": [],
               "assets": [
 
               ],
