--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --base-href / --host 0.0.0.0 --disable-host-check --proxy-config proxy.conf.json",
+    "start": "ng serve --base-href / --host crypto-dev1.ti-work.site --disable-host-check --proxy-config proxy.conf.json",
     "build": "ng build --base-href ./ --no-aot --prod",
     "test": "ng test",
     "lint": "ng lint",
