--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "js-marker-clusterer": "^1.0.0",
     "primeicons": "^2.0.0",
     "primeng": "^8.0.2",
-    "rxjs": "~6.4.0",
+    "rxjs": "^6.5.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
