filter  form to dialog

--- a/angular.json
+++ b/angular.json
@@ -24,11 +24,13 @@
             "tsConfig": "tsconfig.app.json",
             "aot": true,
             "assets": [
-              "src/favicon.ico"
+              "src/favicon.ico",
+              "src/assets"
             ],
             "styles": [
               "src/styles.scss",
-              "node_modules/primeng/resources/primeng.css"
+              "node_modules/primeng/resources/primeng.css",
+              "node_modules/primeicons/primeicons.css"
             ],
             "scripts": []
           },
@@ -48,9 +50,10 @@
               "aot": true,
               "styles": [
                 "node_modules/primeng/resources/primeng.css",
-                "src/styles.scss"
+                 "src/styles.scss"
               ],
               "assets": [
+                "src/assets"
               ],
               "extractLicenses": true,
               "vendorChunk": false,
